--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@builtbymom/web3": "^0.0.122",
 		"@headlessui/react": "^2.0.4",
+		"@radix-ui/react-switch": "^1.2.6",
 		"@rainbow-me/rainbowkit": "^2.1.2",
 		"@tailwindcss/typography": "^0.5.13",
 		"@wagmi/core": "^2.11.3",
@@ -25,6 +26,7 @@
 		"axios": "^1.7.2",
 		"framer-motion": "^11.2.11",
 		"graphql-request": "^7.0.1",
+		"lucide-react": "^0.542.0",
 		"next": "14.0.4",
 		"next-pwa": "^5.6.0",
 		"react": "^18.3.1",
@@ -38,6 +40,7 @@
 	"devDependencies": {
 		"@next/bundle-analyzer": "^14.2.4",
 		"@next/eslint-plugin-next": "^14.2.4",
+		"@types/minimatch": "^5.1.2",
 		"@testing-library/react": "^16.0.0",
 		"@types/node": "^20.14.6",
 		"@types/react": "^18.3.3",
